@@ -7,8 +7,10 @@ apport (0.79) UNRELEASED; urgency=low
   * apport/ui.py: Convert to new write_mime() interface from above. This
     finally automatically tags bugs with need-$ARCH-retrace. Bump
     p-problem-report dependency of python-apport for this.
+  * apport/report.py: Change example URLs in the testsuite from launchpad to
+    an artificial ones to avoid the impression that it is LP specific.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed,  9 May 2007 15:52:17 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed,  9 May 2007 17:39:25 +0200
 
 apport (0.78) gutsy; urgency=low
 
